@@ -1,12 +1,7 @@
 {
-  "count": 33,
-  "uniques": 4,
+  "count": 32,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-07-21T00:00:00Z",
       "count": 4,
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-08-02T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
